# native-sg

./: .gitignore  Makefile  README.md  YOLONAS-POSE.md  YOLONAS.md  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml
documentation/source/: Checkpoints.md  Data.md  DetectionOutputAdapter.md  EMA.md  Example_Classification.md  Example_Training-an-external-model.md  ImprovingTrainingTime.md  KD.md  LRScheduling.md  Losses.md  Metrics.md  ModelPredictions.md  ObjectDetection.md  PhaseCallbacks.md  PoseEstimation.md  PredictionSetup.md  QuickstartBasicToolkit.md  Recipes_Custom.md  Recipes_Factories.md  Recipes_Training.md  Segmentation.md  YoloNASPoseQuickstart.md  conf.py  (+20 more)
notebooks/: DEKR_PoseEstimationFineTuning.ipynb  Segmentation_Model_Export.ipynb  dataloader_adapter.ipynb  detection_how_to_connect_custom_dataset.ipynb  detection_transfer_learning.ipynb  how_to_run_model_predict.ipynb  how_to_use_knowledge_distillation_for_classification.ipynb  quickstart_segmentation.ipynb  segmentation_connect_custom_dataset.ipynb  transfer_learning_classification.ipynb  transfer_learning_semantic_segmentation.ipynb  what_are_recipes_and_how_to_use.ipynb  yolo_nas_custom_dataset_fine_tuning_with_qat.ipynb  yolo_nas_pose_eval_with_pycocotools.ipynb
scripts/: run_tests.py
tests/: verify_distributed_sampler_wrapper.py  verify_min_samples_ddp.py  verify_notebook_version.py  verify_version.py
tutorials/: DagsHub_X_SuperGradients.ipynb
utils_scripts/: run_tests.py
(+598 files in other folders)
