[tool.poetry]
name = "native_sg"
version = "0.1.0"
description = "A forked and maintained version of SuperGradients."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

## Native SG configuration for black/mypy/isort etc tools.
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 160

## Configuration for Black.
[tool.black]
line-length = 160
target-version = ['py36', 'py37', 'py38', 'py39' ]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.circleci
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
